--- a/hire-me.html
+++ b/hire-me.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hire me - Brand</title>
+    <title>Hire me</title>
     <meta name="theme-color" content="rgb(0,0,0)">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/Untitled%20design.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/Untitled%20design.png">
