--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta property="og:title" content="Goldencap.me" />
+    <meta property="og:description" content="Portfolio Website" />
+    <meta property="og:url" content="http://goldencap.me" />
+    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQFImSnLpGDPMg/profile-displayphoto-shrink_200_200/0/1601274270769?e=1647475200&v=beta&t=o6xQ0OmWhESTkG0IYcRZ5rsw-cQxkq0UdFa0owjELVw" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>GoldenCap</title>
