--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="col-md-6"><span class="period">06/2020 - 09/2020</span></div>
                         </div>
-                        <p class="text-muted">• Applied operations on Data (Initially)<br>• Worked on ML Models with the team of 5<br>• Technology learned and Implemented: Computer Vision, Tensorflow, Cloud<br></p>
+                        <p class="text-muted">• Involved in Data Preprocessing Techniques for making the data useful for creating Machine Learning models<br>• Learnt to create Machine Learning models and IOT implementation<br>• Deployed these on Cloud like Azure, AWS<br>•Worked on Custom Vision of Cloud to solve problems and achieved 80% of accuracy<br></p>
                     </div>
                     <div class="item">
                         <div class="row">
