--- a/admin.html
+++ b/admin.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Admin</title>
-    <link rel="icon" type="image/png" sizes="450x450" href="assets2/img/Untitled design.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets2/img/Untitled%20design.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets2/img/Untitled%20design.png">
-    <link rel="stylesheet" href="assets2/bootstrap/css/bootstrap2.min.css">
+    <link rel="icon" type="image/png" sizes="450x450" href="assets/img/Untitled design.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/Untitled%20design.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/Untitled%20design.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap2.min.css">
     <link rel="manifest" href="manifest2.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
@@ -35,9 +35,9 @@
 			</center>
         </section>
     </main>
-    <script src="assets2/bootstrap/js/bootstrap2.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets2/js/theme.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
