--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -61,7 +61,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card border-0"><a href="https://www.coursera.org/account/accomplishments/verify/KTMN4VFCSJAE"><img class="card-img-top scale-on-hover" src="assets/img/nature/machine%20case%20study.jpeg" alt="Card Image"></a>
                             <div class="card-body" style="background: #d9d7d7;">
-                                <h6><a href="https://www.coursera.org/account/accomplishments/verify/KTMN4VFCSJAE"><strong>Machine Learning Specialization</strong><br>University of Washington<br></a></h6>
+                                <h6><a href="https://coursera.org/share/c3f5a3858e53fafe5724c41c2a9d3dc1"><strong>Machine Learning Specialization</strong><br>University of Washington<br></a></h6>
                             </div>
                         </div>
                     </div>
